<resources>
    <string name="app_name">PhotoAsGift</string>

    <!--address form-->
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="middle_name">Middle name</string>
    <string name="country">Country</string>
    <string name="street">Street</string>
    <string name="house">House</string>
    <string name="building">Building</string>
    <string name="structure">Structure</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="area">Area</string>
    <string name="apartment">Apartment</string>
    <string name="index">Index</string>
    <string name="from">From</string>
    <string name="whom">Whom</string>
    <string name="where">Where</string>

    <!--buttons-->
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>

</resources>
