<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/address_form_fragment_whom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/address_form_fragment_person"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/whom"
            android:src="@drawable/ic_person_add_black_24dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/address_form_fragment_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/address_form_fragment_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="50dp"
                android:hint="@string/name"
                android:textSize="21sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/address_form_fragment_surname_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address_form_fragment_name_layout">

            <EditText
                android:id="@+id/address_form_fragment_surname"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="50dp"
                android:hint="@string/surname"
                android:textSize="21sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/address_form_fragment_middle_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address_form_fragment_surname_layout">

            <EditText
                android:id="@+id/address_form_fragment_middle_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="50dp"
                android:hint="@string/middle_name"
                android:textSize="21sp" />

        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/address_form_fragment_where"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/address_form_fragment_world"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/where"
            android:src="@drawable/ic_public_black_24dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/address_form_fragment_country_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/address_form_fragment_country"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="50dp"
                android:hint="@string/country"
                android:textSize="21sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/address_form_fragment_city_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address_form_fragment_country_layout">

            <EditText
                android:id="@+id/address_form_fragment_city"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="50dp"
                android:hint="@string/city"
                android:textSize="21sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/address_form_fragment_street_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address_form_fragment_city_layout">

            <EditText
                android:id="@+id/address_form_fragment_street"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="50dp"
                android:hint="@string/street"
                android:textSize="21sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/address_form_fragment_house_layout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address_form_fragment_street_layout"
            android:layout_marginLeft="50dp">

            <EditText
                android:id="@+id/address_form_fragment_house"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:hint="@string/house"
                android:inputType="number"
                android:textSize="21sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/address_form_fragment_building_layout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address_form_fragment_street_layout"
            android:layout_toRightOf="@+id/address_form_fragment_house_layout">

            <EditText
                android:id="@+id/address_form_fragment_building"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:hint="@string/building"
                android:inputType="number"
                android:textSize="21sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/address_form_fragment_structure_layout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address_form_fragment_street_layout"
            android:layout_toRightOf="@+id/address_form_fragment_building_layout">

            <EditText
                android:id="@+id/address_form_fragment_structure"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:hint="@string/structure"
                android:inputType="number"
                android:textSize="21sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/address_form_fragment_index_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address_form_fragment_structure_layout">

            <EditText
                android:id="@+id/address_form_fragment_index"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="50dp"
                android:hint="@string/index"
                android:textSize="21sp" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/address_form_fragment_emotion"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/from"
            android:src="@drawable/ic_insert_emoticon_black_24dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/address_form_fragment_from_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp">

            <EditText
                android:id="@+id/address_form_fragment_from"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/from"
                android:textSize="21sp" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>
</LinearLayout>